--- a/.github/workflows/CommonDLL.yml
+++ b/.github/workflows/CommonDLL.yml
@@ -11,5 +11,5 @@ jobs:
       uses: warrenbuckley/Setup-MSBuild@v1
 
     - name: MSBuild
-      working-directory: src/CalcLib/CalcLib
+      working-directory: CalcLib/CalcLib
       run: msbuild CalcLib.csproj
