--- a/.github/workflows/CommonDLL.yml
+++ b/.github/workflows/CommonDLL.yml
@@ -13,3 +13,9 @@ jobs:
     - name: MSBuild
       working-directory: CalcLib/CalcLib
       run: msbuild CalcLib.csproj
+    - name: Upload artifacts
+      uses: skx/github-action-publish-binaries@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        args: 'Common-DLL-*'
